# fire_incident_mas

./: .gitignore  README.md  pyproject.toml
src/mas_project/: main.py
src/mas_project/crews/emergency_services/: __init__.py  emergency_services_crew.py
src/mas_project/crews/emergency_services/config/: agents.yaml  tasks.yaml
src/mas_project/crews/emergency_services/schemas/: __init__.py  fire_event_schema.py
src/mas_project/crews/firefighter_services/: __init__.py  firefighter_services_crew.py
src/mas_project/crews/firefighter_services/config/: agents.yaml  tasks.yaml
src/mas_project/crews/firefighter_services/schemas/: __init__.py  firefighter_unit_schema.py
src/mas_project/crews/medical_services/: __init__.py  medical_services_crew.py
src/mas_project/crews/medical_services/config/: agents.yaml  tasks.yaml
src/mas_project/crews/medical_services/schemas/: __init__.py  medical_unit_schema.py
src/mas_project/llm/: __init__.py  local_llm.py
src/mas_project/tools/: __init__.py  json.py  map.py  mdx.py  schemas.py
