[project]
name = "mas_project"
version = "0.1.0"
description = "mas_project using crewAI"
authors = [{ name = "Theofanis Petkos", email = "thepetk@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = ["crewai[tools]>=0.79.4,<1.0.0"]

[project.scripts]
kickoff = "mas_project.main:kickoff"
plot = "mas_project.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
